# order_management_service

./: .gitignore  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
config/: settings.py  urls.py
dishes/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views_api.py  views_html.py
dishes/migrations/: 0001_initial.py
dishes/templates/dishes/: dish_confirm_delete.html  dish_detail.html  dish_form.html  dish_list.html
dishes/tests/: fixtures.py  tests.py
logics/: order_logics.py
order_logic/: services.py
orders/: admin.py  filters.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  view_html.py  views.py  views_api.py
orders/management/commands/: csu.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: base.html  calculation_revenue.html  home.html  index.html  login.html  order_confirm_delete.html  order_detail.html  order_filter_list.html  order_form.html  order_list.html  search_results.html  table_confirm_delete.html  table_detail.html  table_form.html  table_list.html
orders/templates/orders/includes/: navbar.html  paginator.html
orders/templatetags/: my_tags1.py
orders/tests/: fixtures.py  tests.py
services/: display_html.py
